--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -3,23 +3,28 @@
   margin: 0;
   font-family: 'Cairo', sans-serif; }
 
-.navbar {
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   background-color: #BCDAEA;
-  padding-bottom: 10px; }
+  color: black;
+  height: 17px;
+  padding: 1em; }
 
-.main-nav {
-  text-decoration: none;
-  list-style-type: none;
-  display: none; }
+.nav {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none; }
+
+.nav > li {
+  margin: 0 1rem; }
 
 .nav-links {
   margin-left: 40px;
   color: black;
   text-decoration: none; }
-
-.main-nav li {
-  text-align: center;
-  margin: 5px auto; }
 
 .logo {
   color: #95C4DB;
@@ -29,44 +34,10 @@
   margin-top: 10px;
   margin-left: 20px; }
 
-.navbar-toggle {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  cursor: pointer;
-  color: #1078AD;
-  font-size: 50px; }
-
-#chkToggle {
-  display: none; }
-
-#chkToggle:checked + ul.main-nav {
-  display: block; }
-
-@media screen and (min-width: 768px) {
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 0;
-    height: 50px;
-    align-items: center; }
-  #chkToggle:checked + ul.main-nav {
-    display: flex; }
-  .main-nav {
-    display: flex;
-    margin-right: 30px;
-    flex-direction: row;
-    justify-content: flex-end; }
-  .main-nav li {
-    margin: 0; }
-  .logo {
-    margin-top: 0; }
-  .navbar-toggle {
-    display: none; }
-  .logo:hover,
-  .nav-links:hover {
-    font-weight: bold;
-    color: #1078AD; } }
+.logo:hover,
+.nav-links:hover {
+  font-weight: bold;
+  color: #1078AD; }
 
 .info_med {
   background-color: #F4CF1B;
