--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -5,28 +5,33 @@
     
 }
 
-.navbar {
-    background-color: #BCDAEA; 
-    padding-bottom: 10px;
-  }
+.top-nav {
   
-  .main-nav {
-    text-decoration: none;
-    list-style-type: none;
-    display: none;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #BCDAEA;
+  color: black;
+  height: 17px;
+  padding: 1em;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+}
+
+.nav > li {
+  margin: 0 1rem;
+}
   .nav-links{
     margin-left: 40px;
       color: black;
     text-decoration: none;
   }
- 
-
-  .main-nav li {
-    text-align: center;
-    margin: 5px auto;
-  }
-  
+    
   .logo {
     color: #95C4DB;
     text-decoration: none;
@@ -36,63 +41,12 @@
     margin-left: 20px;
   }
   
-  .navbar-toggle {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    cursor: pointer;
+  .logo:hover,
+  .nav-links:hover {
+  font-weight: bold;
     color: #1078AD;
-    font-size: 50px;
   }
-  
-  #chkToggle {
-    display: none;
-  }
-  
-  #chkToggle:checked + ul.main-nav {
-    display: block;
-  }
-  
-  @media screen and (min-width: 768px) {
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      padding-bottom: 0;
-      height: 50px;
-      align-items: center;
-    }
-  
-    #chkToggle:checked + ul.main-nav {
-      display: flex;
-    }
-  
-    .main-nav {
-      display: flex;
-      margin-right: 30px;
-      flex-direction: row;
-      justify-content: flex-end;
-    }
-  
-    .main-nav li {
-      margin: 0;
-    }
-  
-  
-    .logo {
-      margin-top: 0;
-    }
-  
-    .navbar-toggle {
-      display: none;
-    }
-  
-    .logo:hover,
-    .nav-links:hover {
-    font-weight: bold;
-      color: #1078AD;
-    }
-  }
-  
+
 .info{
    &_med{
     
