adding syptomes cards

--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -93,3 +93,25 @@ button {
   button:hover {
     color: white;
     background: #1078AD; }
+
+.title h2 {
+  margin-top: 40px;
+  font-weight: bold;
+  text-align: center;
+  color: #1078AD; }
+
+.content {
+  display: flex;
+  flex-wrap: wrap; }
+
+.card {
+  flex: 4 0 40%;
+  margin: 20px;
+  height: 170px;
+  color: #1078AD;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+h4 {
+  text-align: center; }
