--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -143,6 +143,23 @@ h4{
   text-align: center;
 }
 
+.container{
+   background-color:  #1078AD;
+   color: white;
+   h2{
+     text-align: center;
+   }
+   .title
+   {
+    font-weight: bold;
+    margin-left: 18em;
+    margin-top: 1em;
+   }
+   p{
+    margin-left: 7em;
+   }
+}
+
 
 
 
