adding recommandation and question section and fixing some probs

--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -90,15 +90,14 @@ flex-wrap: nowrap;
     font-weight: bold;
        color: #7F7F7F;
    }
-
-}
-.image img{
+   .image img{
     margin-top: 1em;
     margin-left: 9em;
     width: 75%;
     
 }
-button{
+.btn{
+  
     font-weight: bold;
     margin-top: 1em;
     background-color:#BCDAEA ; 
@@ -116,6 +115,8 @@ button{
       background:  #1078AD;
       }
 }
+}
+.cont{
 .title h2{
   margin-top: 40px;
   font-weight: bold;
@@ -142,23 +143,93 @@ color:  #1078AD;
 h4{
   text-align: center;
 }
-
-.container{
+}
+.rec{
+  
    background-color:  #1078AD;
    color: white;
-   h2{
+  &__titles h3{
+    margin-left: 17em;
+  } 
+  h2{
      text-align: center;
    }
-   .title
-   {
-    font-weight: bold;
-    margin-left: 18em;
-    margin-top: 1em;
-   }
+  
    p{
     margin-left: 7em;
+   
    }
+   .sec  {
+    flex-direction: column;
+    margin-left: 45em;
+      display: flex;
+      margin-top:1em;
+          margin-left: 65em;
+      h3{
+        margin-left: 2em;
+        margin-top: -10em;
+        color: #F4CF1B;
+      }
+     
+    input[type=button]{
+      
+      margin-top: 9em;
+    width: 10em;    
+    font-weight: bold;
+    margin-top: 1em;
+    background-color:#F4CF1B ; 
+    border: 2px solid #1078AD;
+    color:  #1078AD; 
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+        }
+      }
+   
+
+.quest{
+ 
+margin: 0;
+padding: 0;
+  background-color: #95C4DB;
+
+
+  img {
+    margin-left: 39em;
+      margin-top: 1em;
+      width: 41px;
+      
+     }
+h3{
+ 
+  text-align: center;
+font-weight: bold;
+color: #1078AD;
+
 }
+.btn{
+  margin-left: 30em;
+  font-weight: bold;
+  margin-top: 1em;
+  background-color:#BCDAEA ; 
+  border: 2px solid #1078AD;
+  color:  #1078AD;
+  border-radius: 10px;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;  
+  width: 21em;
+  &:hover{
+      color:  white;
+    background:  #1078AD;
+    }
+} 
+ 
+     }
+  
 
 
 
