--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -125,10 +125,9 @@
     margin-left: 7em; }
   .rec .sec {
     flex-direction: column;
-    margin-left: 45em;
     display: flex;
     margin-top: 1em;
-    margin-left: 65em; }
+    margin-left: 60em; }
     .rec .sec h3 {
       margin-left: 2em;
       margin-top: -10em;
@@ -146,8 +145,6 @@
       display: inline-block; }
 
 .quest {
-  margin: 0;
-  padding: 0;
   background-color: #95C4DB; }
   .quest img {
     margin-left: 39em;
@@ -165,7 +162,7 @@
     border: 2px solid #1078AD;
     color: #1078AD;
     border-radius: 10px;
-    padding: 5px;
+    padding: 4px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -174,3 +171,41 @@
     .quest .btn:hover {
       color: white;
       background: #1078AD; }
+
+.footer__main img {
+  flex-direction: row;
+  margin-left: 38em; }
+
+.footer__col-2 h3 {
+  margin-left: 15em;
+  color: #1078AD; }
+
+.footer__col-2 h4 {
+  margin-left: -34em;
+  color: #369D53; }
+
+.footer__col-2 p {
+  text-align: center;
+  margin-left: -45em;
+  font-size: 12px;
+  font-weight: 700;
+  color: #2B2B2C; }
+
+.footer__col-3 {
+  display: flex;
+  flex-direction: column;
+  max-width: 100px;
+  margin-left: 46em;
+  margin-top: -10em; }
+
+.footer .btn {
+  display: block;
+  margin-top: 9em;
+  width: 20em;
+  font-weight: bold;
+  margin-top: 1em;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(16, 121, 173, 0.5);
+  color: #1078AD;
+  text-align: center;
+  text-decoration: none; }
