--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -161,10 +161,10 @@ h4{
    }
    .sec  {
     flex-direction: column;
-    margin-left: 45em;
+    // margin-left: -30em;
       display: flex;
       margin-top:1em;
-          margin-left: 65em;
+          margin-left: 60em;
       h3{
         margin-left: 2em;
         margin-top: -10em;
@@ -190,8 +190,7 @@ h4{
 
 .quest{
  
-margin: 0;
-padding: 0;
+
   background-color: #95C4DB;
 
 
@@ -216,7 +215,7 @@ color: #1078AD;
   border: 2px solid #1078AD;
   color:  #1078AD;
   border-radius: 10px;
-  padding: 5px;
+  padding: 4px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -228,8 +227,70 @@ color: #1078AD;
     }
 } 
  
-     }
+}
+
+.footer{
+
+ 
+  &__main{
+      img{
+        flex-direction: row;
+        margin-left: 38em;
+
+      }
+  }
+
+  &__col-2{
+          h3{
+            margin-left: 15em;
+            color: #1078AD;
+          }
+          h4{
+            margin-left: -34em;
+            color: #369D53;
+          }
+          p{
+            text-align: center;
+            margin-left: -45em;
+            font-size: 12px;
+         font-weight: 700;
+        color: #2B2B2C;
+          }
+  }
+  &__col-3{
+      display: flex;
+      flex-direction: column;
+      max-width: 100px;
+      margin-left: 46em;
+      margin-top: -10em;
+      
+      }
+      .btn{
+        display: block;
+      margin-top: 9em;
+      width: 20em;    
+      font-weight: bold;
+      margin-top: 1em;
+      background-color: transparent; 
+      border-bottom: 1px solid rgba(16, 121, 173, 0.5) ;
+      color:  #1078AD; 
+      text-align: center;
+      text-decoration: none;
+      
+    }
+  }
+ 
   
+   
+     
+      
+       
+      
+  
+
+  
+
+
 
 
 
