some modifications needed in footer section

--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -199,7 +199,7 @@
   margin-left: 46em;
   margin-top: -10em; }
 
-.footer .btn {
+.footer .footer-links {
   display: block;
   margin-top: 9em;
   width: 20em;
