--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -230,8 +230,7 @@ color: #1078AD;
 }
 
 .footer{
- 
- 
+  
   &__col-1{
       img{
         flex-direction: row;
@@ -265,7 +264,7 @@ color: #1078AD;
       margin-top: -10em;
       
       }
-      .btn{
+      .footer-links{
         display: block;
       margin-top: 9em;
       width: 20em;    
