changing the way i worked into the 7-1-pattern

--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -4,300 +4,16 @@
     font-family: 'Cairo', sans-serif;
     
 }
+@import "navbar";
 
-.top-nav {
-  
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #BCDAEA;
-  color: black;
-  height: 17px;
-  padding: 1em;
-}
+@import "info";
 
-.nav {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-}
+@import "test";
 
-.nav > li {
-  margin: 0 1rem;
-}
-  .nav-links{
-    margin-left: 40px;
-      color: black;
-    text-decoration: none;
-  }
-    
-  .logo {
-    color: #95C4DB;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    margin-top: 10px;
-    margin-left: 20px;
-  }
-  
-  .logo:hover,
-  .nav-links:hover {
-  font-weight: bold;
-    color: #1078AD;
-  }
+@import "cont";
 
-.info{
-   &_med{
-    
-       background-color: #F4CF1B;
-       text-align: center;
-   }
-   h3{
-    font-weight: bold;
-       padding-top:11px;;
-       color: #1078AD;
-   }
-   p{
-    
-    margin-top: 0em; 
-    padding-bottom: 22px;
-   }
-}
-.test{
- display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
-     justify-content: space-around;
-        align-items: center;
+@import "rec";
 
-       &_container{
-        margin-top: 2em; 
-    text-align: center;
-    margin-left: 6em;
-   
-       }
-       img{
-        margin-top: 1em; 
-           width: 40px;
-       }
-   h3{
-    font-weight: bold;
-    color: #1078AD;
+@import "quest";
 
-   }
-   p{
-    font-weight: bold;
-       color: #7F7F7F;
-   }
-   .image img{
-    margin-top: 1em;
-    margin-left: 9em;
-    width: 75%;
-    
-}
-.btn{
-  
-    font-weight: bold;
-    margin-top: 1em;
-    background-color:#BCDAEA ; 
-    border: 2px solid #1078AD;
-    color:  #1078AD;
-    border-radius: 10px;
-    padding: 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;  
-    width: 28em;
-    &:hover{
-        color:  white;
-      background:  #1078AD;
-      }
-}
-}
-.cont{
-.title h2{
-  margin-top: 40px;
-  font-weight: bold;
-  text-align: center;
-color:  #1078AD;
-}
-
-.content{
-  display: flex;
-  flex-wrap: wrap;
- 
-}
-.card{
-  
-  flex: 4 0 40%; 
-  margin: 20px;
-  height: 170px;
-  color: #1078AD;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-}
-h4{
-  text-align: center;
-}
-}
-.rec{
-  
-   background-color:  #1078AD;
-   color: white;
-  &__titles h3{
-    margin-left: 17em;
-  } 
-  h2{
-     text-align: center;
-   }
-  
-   p{
-    margin-left: 7em;
-   
-   }
-   .sec  {
-    flex-direction: column;
-    // margin-left: -30em;
-      display: flex;
-      margin-top:1em;
-          margin-left: 60em;
-      h3{
-        margin-left: 2em;
-        margin-top: -10em;
-        color: #F4CF1B;
-      }
-     
-    input[type=button]{
-      
-      margin-top: 9em;
-    width: 10em;    
-    font-weight: bold;
-    margin-top: 1em;
-    background-color:#F4CF1B ; 
-    border: 2px solid #1078AD;
-    color:  #1078AD; 
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-  }
-        }
-      }
-   
-
-.quest{
- 
-  padding-block-end: 2em;
-  background-color: #95C4DB;
-
-
-  img {
-    margin-left: 39em;
-      margin-top: 1em;
-      width: 41px;
-      
-     }
-h3{
- 
-  text-align: center;
-font-weight: bold;
-color: #1078AD;
-
-}
-.btn{
-  margin-left: 30em;
-  font-weight: bold;
-  margin-top: 1em;
-  background-color:#BCDAEA ; 
-  border: 2px solid #1078AD;
-  color:  #1078AD;
-  border-radius: 10px;
-  padding: 4px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;  
-  width: 21em;
-  &:hover{
-      color:  white;
-    background:  #1078AD;
-    }
-} 
- 
-}
-
-.footer{
-  
-  &__col-1{
-      img{
-        flex-direction: row;
-        margin-left: 38em;
-
-      }
-  }
-
-  &__col-2{
-          h3{
-            margin-left: 15em;
-            color: #1078AD;
-          }
-          h4{
-            margin-left: -34em;
-            color: #369D53;
-          }
-          p{
-            text-align: center;
-            margin-left: -45em;
-            font-size: 12px;
-         font-weight: 700;
-        color: #2B2B2C;
-          }
-  }
-  &__col-3{
-      display: flex;
-      flex-direction: column;
-      max-width: 100px;
-      margin-left: 46em;
-      margin-top: -10em;
-      
-      }
-      .footer-links{
-        display: block;
-      margin-top: 9em;
-      width: 20em;    
-      font-weight: bold;
-      margin-top: 1em;
-      background-color: transparent; 
-      border-bottom: 1px solid rgba(16, 121, 173, 0.5) ;
-      color:  #1078AD; 
-      text-align: center;
-      text-decoration: none;
-      
-    }
-    .buttom-line{
-      margin-top: 9em;
-      padding: 1em;
-      background-color:#1078AD ;
-    }
-     
-  }
-
- 
-   
-     
-      
-       
-      
-  
-
-  
-
-
-
-
-
-
-
+@import "footer";
