--- a/Starter-file/app/scss/_cont.scss
+++ b/Starter-file/app/scss/_cont.scss
@@ -3,7 +3,7 @@
       margin-top: 40px;
       font-weight: bold;
       text-align: center;
-    color:  #1078AD;
+    color: $color-blue;
     }
     
     .content{
