--- a/Starter-file/app/scss/_cont.scss
+++ b/Starter-file/app/scss/_cont.scss
@@ -16,7 +16,7 @@
       flex: 4 0 40%; 
       margin: 20px;
       height: 170px;
-      color: #1078AD;
+      color: color-blue;
       display: flex;
       align-items: center;
       justify-content: center;
