--- a/Starter-file/app/scss/_footer.scss
+++ b/Starter-file/app/scss/_footer.scss
@@ -11,18 +11,18 @@
   &__col-2{
           h3{
             margin-left: 15em;
-            color: #1078AD;
+            color: color-blue;
           }
           h4{
             margin-left: -34em;
-            color: #369D53;
+            color: $color-green;
           }
           p{
             text-align: center;
             margin-left: -45em;
             font-size: 12px;
          font-weight: 700;
-        color: #2B2B2C;
+        color: $color-black;
           }
   }
   &__col-3{
@@ -40,8 +40,8 @@
       font-weight: bold;
       margin-top: 1em;
       background-color: transparent; 
-      border-bottom: 1px solid rgba(16, 121, 173, 0.5) ;
-      color:  #1078AD; 
+      border-bottom: 1px solid $color-footer-links ;
+      color:  $color-blue; 
       text-align: center;
       text-decoration: none;
       
@@ -50,7 +50,7 @@
     .buttom-line{
       margin-top: 9em;
       padding: 1em;
-      background-color:#1078AD ;
+      background-color:$color-blue ;
     }
      
   }
