--- a/Starter-file/app/scss/_info.scss
+++ b/Starter-file/app/scss/_info.scss
@@ -1,13 +1,13 @@
 .info{
     &_med{
      
-        background-color: #F4CF1B;
+        background-color: $color-orangy;
         text-align: center;
     }
     h3{
      font-weight: bold;
         padding-top:11px;;
-        color: #1078AD;
+        color: $color-blue;
     }
     p{
      
