--- a/Starter-file/app/scss/_quest.scss
+++ b/Starter-file/app/scss/_quest.scss
@@ -2,7 +2,7 @@
 .quest{
  
     padding-block-end: 2em;
-    background-color: #95C4DB;
+    background-color: $color-button;
   
   
     img {
@@ -15,16 +15,16 @@
    
     text-align: center;
   font-weight: bold;
-  color: #1078AD;
+  color: $color-blue;
   
   }
   .btn{
     margin-left: 30em;
     font-weight: bold;
     margin-top: 1em;
-    background-color:#BCDAEA ; 
-    border: 2px solid #1078AD;
-    color:  #1078AD;
+    background-color:$color-button ; 
+    border: 2px solid $color-blue;
+    color:  $color-blue;
     border-radius: 10px;
     padding: 4px;
     text-align: center;
@@ -33,8 +33,8 @@
     font-size: 16px;  
     width: 21em;
     &:hover{
-        color:  white;
-      background:  #1078AD;
+        color:  $color-white;
+      background:  $color-blue;
       }
   } 
 }
