--- a/Starter-file/app/scss/_rec.scss
+++ b/Starter-file/app/scss/_rec.scss
@@ -1,7 +1,7 @@
 .rec{
   
-   background-color:  #1078AD;
-   color: white;
+   background-color:  $color-blue;
+   color: $color-white;
   &__titles h3{
     margin-left: 17em;
   } 
@@ -16,14 +16,13 @@
 
  .sec  {
   flex-direction: column;
-  // margin-left: -30em;
     display: flex;
     margin-top:1em;
         margin-left: 60em;
     h3{
       margin-left: 2em;
       margin-top: -10em;
-      color: #F4CF1B;
+      color: $color-orangy;
     }
    
   input[type=button]{
@@ -32,9 +31,9 @@
   width: 10em;    
   font-weight: bold;
   margin-top: 1em;
-  background-color:#F4CF1B ; 
-  border: 2px solid #1078AD;
-  color:  #1078AD; 
+  background-color:$color-orangy ; 
+  border: 2px solid $color-blue;
+  color:  $color-blue; 
   text-align: center;
   text-decoration: none;
   display: inline-block;
