--- a/Starter-file/app/scss/_test.scss
+++ b/Starter-file/app/scss/_test.scss
@@ -17,12 +17,12 @@
           }
       h3{
        font-weight: bold;
-       color: #1078AD;
+       color: $color-blue;
    
       }
       p{
        font-weight: bold;
-          color: #7F7F7F;
+          color: $color-grey;
       }
       .image img{
        margin-top: 1em;
@@ -34,9 +34,9 @@
      
        font-weight: bold;
        margin-top: 1em;
-       background-color:#BCDAEA ; 
-       border: 2px solid #1078AD;
-       color:  #1078AD;
+       background-color:$color-button ; 
+       border: 2px solid $color-blue;
+       color:  $color-blue;
        border-radius: 10px;
        padding: 5px;
        text-align: center;
@@ -45,8 +45,8 @@
        font-size: 16px;  
        width: 28em;
        &:hover{
-           color:  white;
-         background:  #1078AD;
+           color:  $color-white;
+         background:  $color-blue;
          }
    }
    }
