--- a/Starter-file/app/scss/_variables.scss
+++ b/Starter-file/app/scss/_variables.scss
@@ -1,10 +1,14 @@
 $color-blue: #1078AD;
 $color-orangy: #F4CF1B;
 $color-grey: #7F7F7F;
+$color-green:#369D53;
+$color-black:#2B2B2C;
+$color-white:#FFF;
 $color-button:#BCDAEA;
+$color-footer-links:rgba(16, 121, 173, 0.5)
 
 
 
-$mobile: 375px;
-$desktop: 1440px;
-$font-size: 1em;
+
+
+
