--- a/Starter-file/app/scss/utils/_variables.scss
+++ b/Starter-file/app/scss/utils/_variables.scss
@@ -5,7 +5,8 @@ $color-green:#369D53;
 $color-black:#2B2B2C;
 $color-white:#FFF;
 $color-button:#BCDAEA;
-$color-footer-links:rgba(16, 121, 173, 0.5)
+$color-footer-links:rgba(16, 121, 173, 0.5);
+$color-sous-titre:#1A519E;
 
 
 
