--- a/Starter-file/app/scss/layouts/_footer.scss
+++ b/Starter-file/app/scss/layouts/_footer.scss
@@ -10,8 +10,8 @@
 
   &__col-2{
           h3{
-            margin-left: 15em;
-            color: color-blue;
+            margin-left: 18em;
+            color: $color-blue;
           }
           h4{
             margin-left: -34em;
