--- a/Starter-file/app/scss/layouts/_navbar.scss
+++ b/Starter-file/app/scss/layouts/_navbar.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #BCDAEA;
+  background: url(/Starter-file/app/images/png/navbar-bg.png);
   color: $color-black;
   height: 1em;
   padding: 1em;
