--- a/Dom-Montre-Analogue/style.css
+++ b/Dom-Montre-Analogue/style.css
@@ -1,22 +1,10 @@
 /* Layout */
-body{
-    background-color: beige;
-}
-h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: center;
-    margin-top: 3rem;
-    font-size: 3em;
-}
-
 .main {
-    margin-top: -3rem;
     display: flex;
     padding: 2em;
     height: 90vh;
     justify-content: center;
     align-items: middle;
-    
 }
 
 .clockbox,
@@ -27,7 +15,7 @@ h1 {
 /* Clock styles */
 .circle {
     fill: none;
-    stroke: rgb(196, 133, 133);
+    stroke: #000;
     stroke-width: 9;
     stroke-miterlimit: 10;
 }
@@ -37,7 +25,7 @@ h1 {
 }
 .hour-marks {
     fill: none;
-    stroke: palevioletred;
+    stroke: #000;
     stroke-width: 9;
     stroke-miterlimit: 10;
 }
@@ -58,7 +46,7 @@ h1 {
 
 .second-arm {
     fill: none;
-    stroke: palevioletred;
+    stroke: #000;
     stroke-width: 4;
     stroke-miterlimit: 10;
 }
