--- a/Dom-Montre-Analogue/style.css
+++ b/Dom-Montre-Analogue/style.css
@@ -5,7 +5,7 @@ body{
 h2 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    margin-top: 3rem;
+    margin-top: 1em;
     font-size: 3em;
 }
 
@@ -74,6 +74,6 @@ h2 {
 #minute,
 #second {
     transform-origin: 300px 300px;
-    transition: transform .5s ease-in-out;
+    /* transition: transform .5s ease-in-out; */
 }
 
