some modificatin needed

--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -17,3 +17,7 @@
 @import "./layouts/information";
 
 @import "./layouts/protect";
+
+@import "./layouts/initialstepper";
+
+@import "./layouts/preambule.scss";
