--- a/Starter-file/app/scss/utils/_variables.scss
+++ b/Starter-file/app/scss/utils/_variables.scss
@@ -7,8 +7,7 @@ $color-white:#FFF;
 $color-button:#BCDAEA;
 $color-footer-links:rgba(16, 121, 173, 0.5);
 $color-sous-titre:#1A519E;
-
-
+$backgroundcolor:#e9ecef;
 
 
 
