--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -8,7 +8,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background: url(/Starter-file/app/images/png/navbar-bg.png);
+  background: url(/app/images/png/navbar-bg.png);
   color: #2B2B2C;
   height: 1em;
   padding: 1em; }
@@ -113,8 +113,8 @@
   .rec .sec {
     flex-direction: column;
     display: flex;
-    margin-top: 1em;
-    margin-left: 60em; }
+    margin-top: 2em;
+    margin-left: 66em; }
     .rec .sec h3 {
       margin-left: 2em;
       margin-top: -10em;
@@ -123,7 +123,7 @@
       margin-top: 9em;
       width: 10em;
       font-weight: bold;
-      margin-top: 1em;
+      margin-top: 0em;
       background-color: #F4CF1B;
       border: 2px solid #1078AD;
       color: #1078AD;
@@ -135,7 +135,7 @@
   padding-block-end: 2em;
   background-color: #BCDAEA; }
   .quest img {
-    margin-left: 39em;
+    margin-left: 46em;
     margin-top: 1em;
     width: 41px; }
   .quest h3 {
@@ -143,7 +143,7 @@
     font-weight: bold;
     color: #1078AD; }
   .quest .btn {
-    margin-left: 30em;
+    margin-left: 28em;
     font-weight: bold;
     margin-top: 1em;
     background-color: #BCDAEA;
@@ -162,28 +162,28 @@
 
 .footer__col-1 img {
   flex-direction: row;
-  margin-left: 38em; }
+  margin-left: 44em; }
 
-.footer__col-2 h3 {
-  margin-left: 15em;
-  color: #1078AD; }
-
-.footer__col-2 h4 {
-  margin-left: -34em;
-  color: #369D53; }
-
-.footer__col-2 p {
-  text-align: center;
-  margin-left: -45em;
-  font-size: 12px;
-  font-weight: 700;
-  color: #2B2B2C; }
+.footer__col-2 {
+  margin-left: -4em; }
+  .footer__col-2 h3 {
+    margin-left: 21em;
+    color: #1078AD; }
+  .footer__col-2 h4 {
+    margin-left: -41em;
+    color: #369D53; }
+  .footer__col-2 p {
+    text-align: center;
+    margin-left: -45em;
+    font-size: 12px;
+    font-weight: 700;
+    color: #2B2B2C; }
 
 .footer__col-3 {
   display: flex;
   flex-direction: column;
   max-width: 100px;
-  margin-left: 46em;
+  margin-left: 61em;
   margin-top: -10em; }
 
 .footer .foot {
@@ -229,7 +229,7 @@
   margin-left: 24em;
   width: 14em;
   margin-top: -4em;
-  background: url(/Starter-file/app/images/png/button-bg.png);
+  background: url(/app/images/png/button-bg.png);
   height: 2em;
   font-size: 20px;
   text-align: center; }
@@ -297,3 +297,81 @@
     text-align: center; }
   .protect .card h4 {
     text-align: center; }
+
+.row .md-stepper-horizontal {
+  display: table;
+  width: 60%;
+  margin: 0 auto; }
+
+.row .md-stepper-horizontal .md-step {
+  display: table-cell;
+  position: relative;
+  padding: 24px; }
+
+.row .md-stepper-horizontal .md-step .md-step-circle {
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px;
+  font-size: 16px;
+  font-weight: 600; }
+
+.row .md-stepper-horizontal .md-step.active .md-step-circle {
+  background-color: #1078AD; }
+
+.row .md-stepper-horizontal .md-step .md-step-title,
+.row .md-stepper-horizontal {
+  text-align: center;
+  color: #1078AD; }
+
+.row .md-stepper-horizontal .md-step {
+  right: 0;
+  left: 50%;
+  margin-left: 20px; }
+
+.row .md-stepper-horizontal .md-step {
+  left: 0;
+  right: 50%;
+  margin-right: 20px; }
+
+.row .md-step .active-yellow {
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px;
+  font-size: 16px;
+  font-weight: 600; }
+
+.row .preambule {
+  padding: 2em;
+  margin: 11em;
+  background-color: #e9ecef;
+  margin-top: 2em; }
+  .row .preambule h3 {
+    text-align: center;
+    color: #1078AD; }
+  .row .preambule p {
+    font-size: 1em;
+    color: #7F7F7F;
+    text-align: center; }
+
+.row .testbtn {
+  margin-top: -9em;
+  padding-bottom: 5em; }
+
+.row .btn {
+  margin-left: 33em;
+  font-weight: bold;
+  background-color: #BCDAEA;
+  border: 2px solid #1078AD;
+  color: #1078AD;
+  border-radius: -15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 12em; }
