--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -375,3 +375,6 @@
   display: inline-block;
   font-size: 16px;
   width: 12em; }
+  .row .btn:hover {
+    color: #FFF;
+    background: #1078AD; }
