--- a/Starter-file/app/scss/layouts/_initialstepper.scss
+++ b/Starter-file/app/scss/layouts/_initialstepper.scss
@@ -94,7 +94,12 @@
   display: inline-block;
   font-size: 16px;
   width: 12em;
+  &:hover{
+    color:  $color-white;
+  background:  $color-blue;
+  }
 } 
+
 
 }
 
