--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -298,84 +298,90 @@
   .protect .card h4 {
     text-align: center; }
 
-.row .md-stepper-horizontal {
-  display: flex;
-  align-items: center;
-  justify-content: center; }
+.stepper {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.04588);
+  padding-left: 5em;
+  padding-right: 5em; }
+  .stepper-horizontal {
+    justify-content: space-evenly;
+    padding: 250px; }
+    .stepper-horizontal .steps {
+      margin-top: -18em;
+      display: flex;
+      column-count: 3;
+      align-items: center; }
+      .stepper-horizontal .steps .step {
+        width: 100%;
+        text-align: center;
+        line-height: 0.1em;
+        margin: 10px 0 20px; }
+        .stepper-horizontal .steps .step span {
+          height: 25px;
+          width: 25px;
+          background-color: #1078AD;
+          border-radius: 50%;
+          display: inline-block; }
+      .stepper-horizontal .steps .title {
+        color: #1078AD;
+        font-weight: bold;
+        margin-top: 2.5em; }
+      .stepper-horizontal .steps .title.ac {
+        margin-top: 0.75em; }
+      .stepper-horizontal .steps .step.active span {
+        background-color: #F4CF1B;
+        border: 9px solid #BCDAEA;
+        padding: 0px; }
+  .stepper .preambule {
+    font-weight: bold;
+    padding: 1em;
+    margin: 11em;
+    margin-top: -30em;
+    background-color: #e9ecef; }
+    .stepper .preambule .tabs {
+      padding-block-start: 2em;
+      padding-block-end: 2em;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      display: flex;
+      align-items: center; }
+      .stepper .preambule .tabs .tab {
+        display: none; }
+      .stepper .preambule .tabs .tab.active {
+        display: block; }
+      .stepper .preambule .tabs h3 {
+        font-weight: bold;
+        text-align: center;
+        color: #1078AD; }
+      .stepper .preambule .tabs p {
+        margin-top: 1em;
+        font-size: 1em;
+        color: #7F7F7F;
+        text-align: center; }
 
-.row .md-stepper-horizontal .md-step {
-  display: table-cell;
-  position: relative;
-  padding: 24px; }
-
-.row .md-stepper-horizontal .md-step .md-step-circle {
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 30px;
-  font-size: 16px;
-  font-weight: 600; }
-
-.row .md-stepper-horizontal .md-step.active .md-step-circle {
-  background-color: #1078AD; }
-
-.row .md-stepper-horizontal .md-step .md-step-title,
-.row .md-stepper-horizontal {
-  text-align: center;
-  color: #1078AD; }
-
-.row .md-stepper-horizontal .md-step {
-  right: 0;
-  left: 50%;
-  margin-left: 20px; }
-
-.row .md-stepper-horizontal .md-step {
-  left: 0;
-  right: 50%;
-  margin-right: 20px; }
-
-.row .md-step-circle-yellow {
-  width: 30px;
-  height: 30px;
-  margin: 0 auto;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 30px;
-  font-size: 16px;
-  font-weight: 600; }
-
-.row .preambule {
-  padding: 2em;
-  margin: 22em;
-  background-color: #e9ecef;
-  margin-top: 2em; }
-  .row .preambule h3 {
-    font-size: bold;
+.testbtn {
+  margin-bottom: -27em; }
+  .testbtn button {
+    display: block;
+    margin-left: -29em;
+    margin-right: auto;
+    font-weight: bold;
+    background-color: #BCDAEA;
+    border: 2px solid #1078AD;
+    color: #1078AD;
+    border-radius: -15px;
     text-align: center;
-    color: #1078AD; }
-  .row .preambule p {
-    font-size: 1em;
-    color: #7F7F7F;
-    text-align: center; }
-
-.row .testbtn {
-  margin-top: -20em;
-  padding-bottom: 5em; }
-
-.row .btn {
-  margin-left: 33em;
-  font-weight: bold;
-  background-color: #BCDAEA;
-  border: 2px solid #1078AD;
-  color: #1078AD;
-  border-radius: -15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  width: 12em; }
-  .row .btn:hover {
-    color: #FFF;
-    background: #1078AD; }
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    width: 12em; }
+    .testbtn button:hover {
+      color: #FFF;
+      background: #1078AD; }
+  .testbtn:active {
+    outline: none;
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    box-shadow: 0px 1px 0px 0px; }
