adding first question of the section questionnaire not completed yet

--- a/Starter-file/app/scss/styles.scss
+++ b/Starter-file/app/scss/styles.scss
@@ -20,5 +20,4 @@
 
 @import "./layouts/initialstepper";
 
-@import "./layouts/preambule.scss";
-@import "./layouts/pagetest2.scss";
+@import "./layouts/questionnaire";
