--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -385,3 +385,65 @@
     transform: translate(0px, 5px);
     -webkit-transform: translate(0px, 5px);
     box-shadow: 0px 1px 0px 0px; }
+
+#second .progress {
+  display: flex;
+  justify-content: center;
+  display: none; }
+  #second .progress_bar {
+    width: 80%;
+    border-radius: 1em;
+    border: 1px solid #1078ad;
+    margin: 0 0.5em;
+    background-color: #e3eff6; }
+    #second .progress_bar_fill {
+      background-color: #1078ad;
+      width: 0%;
+      height: 100%;
+      border-radius: 1em; }
+
+#second .question h1 {
+  font-size: 2em;
+  text-align: center;
+  color: #7F7F7F;
+  margin-bottom: 3em; }
+
+#second .question .answer {
+  margin-top: -4em; }
+  #second .question .answer .fa {
+    font-size: 26px;
+    position: absolute;
+    top: 51%;
+    left: 50%;
+    transform: translate(-50%, -100%); }
+
+#second .question button {
+  text-align: center;
+  left: 33%;
+  color: #F4CF1B;
+  width: 93px;
+  height: 70px;
+  border-radius: 5px;
+  border: 3px solid #1078AD;
+  position: relative;
+  color: #1078AD;
+  font-weight: 500;
+  transition: .5s; }
+  #second .question button:hover {
+    color: #F4CF1B;
+    background: #1078AD; }
+
+#second .nav-links {
+  border: 2px solid #1078AD;
+  background-color: rgba(16, 121, 173, 0.2);
+  color: #1078AD;
+  transition: .2s;
+  margin-left: 46em;
+  padding: 1px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  width: 5em; }
+  #second .nav-links:hover {
+    color: #FFF;
+    background: #1078AD; }
