--- a/Starter-file/app/scss/layouts/_questionnaire.scss
+++ b/Starter-file/app/scss/layouts/_questionnaire.scss
@@ -1,4 +1,5 @@
 #second{
+
 	#Progress {
 		border-radius: 1em;
 		margin-top: -2em;
@@ -39,13 +40,13 @@
     
 	
 }
-	 
+
 
 
 .question
 {
 	h1 {
-		margin-top: 3em;
+		margin-top: 2em;
 		font-size: 2em;
 	text-align: center;
    color: $color-grey;
@@ -86,4 +87,12 @@
 			}
 		
 }
+.invisible {
+	display: none; }
+  
+  .visible {
+	display: block; }
+  
+  .flex {
+	display: flex; }
 
