--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -386,19 +386,26 @@
     -webkit-transform: translate(0px, 5px);
     box-shadow: 0px 1px 0px 0px; }
 
-#second #Progress {
-  border-radius: 1em;
+#barra {
   margin-top: -2em;
-  width: 107%;
+  border-radius: 1em;
+  width: 100%;
+  height: 10px;
   background-color: #BCDAEA; }
 
-#second #Bar {
+#bar {
   border-radius: 1em;
-  width: 9%;
   height: 10px;
   background-color: #1078AD; }
 
-#second #nxtBtn {
+h1 {
+  margin-top: 2em;
+  font-size: 2em;
+  text-align: center;
+  color: #7F7F7F;
+  margin-bottom: 3em; }
+
+#next {
   border: 2px solid #1078AD;
   background-color: rgba(16, 121, 173, 0.2);
   color: #1078AD;
@@ -408,53 +415,19 @@
   text-decoration: none;
   display: inline-block;
   width: 5em; }
-  #second #nxtBtn:hover {
+  #next:hover {
     color: #FFF;
     background: #1078AD; }
 
-#second p {
-  margin-top: -1em;
-  color: black;
-  margin-left: -56em; }
-
-#second .question h1 {
-  margin-top: 2em;
-  font-size: 2em;
-  text-align: center;
-  color: #7F7F7F;
-  margin-bottom: 3em; }
-
-#second .question .answer {
-  margin-top: -4em; }
-  #second .question .answer .fa {
-    font-size: 26px;
-    position: absolute;
-    top: 51%;
-    left: 50%;
-    transform: translate(-50%, -100%); }
-
-#second .question button {
-  padding-top: 1em;
-  text-align: center;
-  left: 33%;
-  color: #F4CF1B;
-  width: 93px;
-  height: 70px;
-  border-radius: 5px;
-  border: 3px solid #1078AD;
-  position: relative;
+#back {
+  border: 2px solid #1078AD;
+  background-color: rgba(16, 121, 173, 0.2);
   color: #1078AD;
-  font-weight: 500;
-  transition: .5s; }
-  #second .question button:hover {
-    color: #F4CF1B;
-    background: #1078AD; }
-
-.invisible {
-  display: none; }
-
-.visible {
-  display: block; }
-
-.flex {
-  display: flex; }
+  width: 5em;
+  transition: .2s;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 4px 2px;
+  cursor: pointer; }
