--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -410,7 +410,8 @@
 
 .mm-finish-btn {
   display: none;
-  position: relative; }
+  position: relative;
+  width: 8em; }
 
 .mm-finish-btn button {
   border: 2px solid #1078AD;
@@ -435,9 +436,10 @@
   width: 5em; }
 
 .mm-survey-progress {
-  margin-top: -2em;
+  margin-left: 3em;
+  margin-top: -1.5em;
   border-radius: 1em;
-  width: 100%;
+  width: 95%;
   height: 10px;
   background-color: #BCDAEA; }
 
@@ -498,6 +500,10 @@ input[type="radio"] + label {
   width: 35em;
   padding: 0.22em;
   border: 0.5px solid #BCDAEA; }
+
+#questCount {
+  margin-top: -1em;
+  margin-left: -57em; }
 
 .mm-finish-btn.active {
   display: inline-block; }
