--- a/Starter-file/app/scss/layouts/_questionnaire.scss
+++ b/Starter-file/app/scss/layouts/_questionnaire.scss
@@ -28,7 +28,8 @@
 
 .mm-finish-btn {
 	display: none;
-    position: relative;
+	position: relative;
+	width: 8em;
   
 }
 
@@ -61,9 +62,10 @@
 
 
 .mm-survey-progress {
-    margin-top: -2em;
+	margin-left: 3em;
+	margin-top: -1.5em;
 	border-radius: 1em;
-	width: 100%;
+	width: 95%;
 	height: 10px;
 	background-color: $color-button;
 }
@@ -146,6 +148,11 @@ input[type="radio"] + label {
 
 }
 
+#questCount{
+	margin-top: -1em;
+    margin-left: -57em;
+
+}
 
 
 
